test/e2e/fixtures/grpc-endpoint/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-endpoint
  template:
    metadata:
      labels:
        app: grpc-endpoint
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: grpc-endpoint
            - name: KAT_BACKEND_TYPE
              value: grpc_echo
          ports:
            - containerPort: 8080
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-endpoint
spec:
  selector:
    app: grpc-endpoint
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
      protocol: TCP
      appProtocol: grpc
---
apiVersion: getambassador.io/v3alpha1
kind: KubernetesEndpointResolver
metadata:
  name: grpc-endpoint
spec:
  ambassador_id: [(env('SLOT'))]
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: grpc-endpoint
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /echo.EchoService/
  rewrite: ""
  grpc: true
  service: grpc-endpoint:8080
  resolver: grpc-endpoint
  load_balancer:
    policy: round_robin
